# aquarius

./: CMakeLists.txt  dummy_hw.cpp  event_bus.cpp  event_bus.h  fileio_hw.cpp  fileio_hw.h  hardware.cpp  hardware.h  httpd.cpp  httpd.h  hwconfig.cpp  hwconfig.h  hwstate.cpp  hwstate.h  i2c_hw.cpp  i2c_hw.h  linux_hw.cpp  linux_hw.h  logging.cpp  logging.h  main.cpp  owfs_hw.cpp  owfs_hw.h  userdb.cpp  userdb.h  utils.h  wiringpi_hw.cpp  wiringpi_hw.h
etc/aquarius/: config.Dummy.xml  config.OrangePIOne.xml  start-script  users.sample
etc/logrotate.d/: aquarius
etc/systemd/system/: aquarius.service  owfs.service
web/: index.html  noaccess.html  panel.html
